[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
cucumber = { version = "0.21.0", features = ["output-junit"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
simplelog = "0.12.2"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15"
log = "0.4.21"
url = "2.5.0"

[[test]]
name = "test_runner" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
